[package]
name = "jupiter-rarefish"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.9.3"
bytemuck = { version = "1.4.0", features = ["derive", "min_const_generics"]}
anchor-lang = "0.28"
anchor-spl = "0.28"
solana-sdk = "1.16.18"
solana-client = "1.16.18"
anyhow = "1.0"
serde_json = "1.0.82"
serde = "1.0.140"
rust_decimal = "1.26.1"
jupiter-core = { git = "https://github.com/jup-ag/rust-amm-implementation.git" }
jupiter = { git = "https://github.com/jup-ag/rust-amm-implementation.git" }
hyperplane = { git = "https://github.com/hubbleprotocol/rarefish.git", features = [
    "no-entrypoint",
    "production",
], rev = "50ea5f482afca47571eb684697b22eabe30fe173" }
